[package]
authors = ["Arne Hasselbring <arha@uni-bremen.de>"]  # tauri does not support importing this from the workspace yet (already fixed in git, but not released yet)
description = "The GUI application of the RoboCup Standard Platform League GameController"
edition = "2021"  # tauri does not support importing this from the workspace yet (already fixed in git, but not released yet)
license = "MIT"  # tauri does not support importing this from the workspace yet (already fixed in git, but not released yet)
name = "game_controller_app"
repository = "https://github.com/RoboCup-SPL/GameController"  # tauri does not support importing this from the workspace yet (already fixed in git, but not released yet)
version = "0.9.0"  # tauri does not support importing this from the workspace yet (already fixed in git, but not released yet)

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
anyhow = { version = "1" }
clap = { version = "4.2", features = ["derive"] }
game_controller_core = { path = "../game_controller_core" }
game_controller_runtime = { path = "../game_controller_runtime" }
tauri = { version = "1.2.4", features = [] }
tokio = { version = "1.0", features = ["rt-multi-thread"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
