[package]
authors = { workspace = true }
description = "The GUI application of the RoboCup Standard Platform League GameController"
edition = { workspace = true }
license = { workspace = true }
name = "game_controller_app"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
game_controller_core = { workspace = true }
game_controller_runtime = { workspace = true }
tauri = { workspace = true }
tokio = { workspace = true }
tts = { workspace = true }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
