[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "game_controller_msgs"
repository = { workspace = true }
version = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
game_controller_core = { workspace = true }
