[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "game_controller_net"
version = { workspace = true }

[dependencies]
anyhow.workspace = true
bytes.workspace = true
tokio.workspace = true
game_controller.workspace = true
game_controller_msgs.workspace = true
