[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "game_controller_tts"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tts = { workspace = true }
speech-dispatcher = { workspace = true }
